Add initial unit tests and Codecov integration.

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
     "version": "0.0.1",
     "description": "Amazon Kinesis Video Streams WebRTC SDK for JavaScript.",
     "repository": {
-        "type" : "git",
-        "url" : "https://github.com/awslabs/amazon-kinesis-video-streams-webrtc-sdk-js.git"
+        "type": "git",
+        "url": "https://github.com/awslabs/amazon-kinesis-video-streams-webrtc-sdk-js.git"
     },
     "main": "index.js",
     "scripts": {
         "integ-server": "ws -p 3000",
         "test": "jest --runInBand",
+        "test-watch": "jest --watch",
         "build-all": "npm run build-commonjs && npm run build-debug && npm run build-dist",
         "build-commonjs": "tsc -p tsconfig.json",
         "build-debug": "webpack --config webpack.debug.config.js",
@@ -21,23 +22,20 @@
     "author": "Mitchell Loeppky <mrl@amazon.com>",
     "license": "Apache-2.0",
     "devDependencies": {
-        "@types/expect-puppeteer": "^3.3.1",
-        "@types/jest-environment-puppeteer": "^4.3.1",
-        "@types/puppeteer": "^1.19.1",
+        "@trust/webcrypto": "^0.9.2",
+        "@types/jest": "^24.0.23",
         "@typescript-eslint/eslint-plugin": "^2.2.0",
         "@typescript-eslint/parser": "^2.2.0",
+        "codecov": "^3.6.1",
         "eslint": "^6.3.0",
         "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-kvs-webrtc": "file:eslint",
         "eslint-plugin-prettier": "^3.1.0",
         "fork-ts-checker-webpack-plugin": "^1.5.0",
         "jest": "^24.9.0",
-        "jest-puppeteer": "^4.3.0",
         "license-webpack-plugin": "^2.1.2",
-        "local-web-server": "^3.0.7",
         "prettier": "^1.18.2",
-        "puppeteer": "^1.19.0",
-        "ts-jest": "^24.0.2",
+        "ts-jest": "^24.2.0",
         "ts-loader": "^6.0.4",
         "typescript": "^3.6.2",
         "uglifyjs-webpack-plugin": "^2.2.0",
