Increase unit test coverage.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
         "webpack": "^4.39.3",
         "webpack-cli": "^3.3.7",
         "webpack-dev-server": "^3.8.0",
-        "webpack-merge": "^4.2.2",
-        "ws": "^7.2.0"
+        "webpack-merge": "^4.2.2"
     }
 }
