Add explicit dependency on tslib because TypeScript build outputs depend on it.

--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
         "webpack-cli": "^3.3.7",
         "webpack-dev-server": "^3.8.0",
         "webpack-merge": "^4.2.2"
+    },
+    "dependencies": {
+        "tslib": "^1.10.0"
     }
 }
