--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
+        "isomorphic-webcrypto": "^2.3.6",
         "tslib": "^1.10.0"
     }
 }
