--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ node_js:
   - 8
   - 10
   - 12
-script:
+before_script:
   -rm -rf package-lock.json npm-shrinkwrap.json node_modules
   -npm cache clean --force
   -npm cache verify
   -npm install
+script:
   - npm run release
 deploy:
   - provider: npm
