--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,13 +13,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@master
-      - name: Install dependencies
-        run: |
-          sudo npm install -g eslint
-      - name: Run npm release
-        run: |
-          npm run release
-          ls -a
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with: 
+          node-version: 14
+    - name: Install dependencies
+      run: npm install
         
       # - name: Deploy to Github pages
       #   uses: JamesIves/github-pages-deploy-action@v4.2.5
