use multiple node versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   nodejs-ubuntu-build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [8, 10, 12, 14, 16, 18 ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@master
