--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with: 
-          node-version: 14
+          node-version: ${{ matrix.node }}
       - name: Install dependencies
         run: npm install
       - name: Run release
