--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with: 
-          node-version: 14
+          node-version: 10
       - name: Install dependencies
         run: npm install
       - name: Run release
@@ -23,9 +23,9 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           folder: dist
-          branch: gh-pages
-      - name: Deploy to npm packages
-        uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
+          branch: gh-pages-test
+      # - name: Deploy to npm packages
+      #   uses: JS-DevTools/npm-publish@v1
+      #   with:
+      #     token: ${{ secrets.NPM_TOKEN }}
           
