--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "lint": "eslint 'src/**/*.{js,ts}'",
         "release": "npm run lint && npm run test && npm run build-all && npm run copy-examples-to-dist"
     },
-    "author": "Mitchell Loeppky <mrl@amazon.com>",
+    "author": "Divya Sampath Kumar <divku@amazon.com>",
     "license": "Apache-2.0",
     "devDependencies": {
         "@trust/webcrypto": "^0.9.2",
