--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
         "jsdom": "^20.0.0",
         "json-schema": "^0.4.0",
         "tslib": "^1.10.0"
+    },
+    "overrides": {
+        "qs": "6.7.3"
     }
 }
