--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
         "isomorphic-webcrypto": "^2.3.6",
         "jsdom": "^20.0.0",
         "json-schema": "^0.4.0",
-        "tslib": "^1.10.0"
+        "json5": "^2.2.3",
+        "tslib": "^1.10.0",
+        "ua-parser-js": "^1.0.35",
+        "xml2js": "^0.5.0"
     },
     "overrides": {
         "qs": "6.7.3",
