--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "devDependencies": {
         "@trust/webcrypto": "^0.9.2",
         "@types/jest": "^24.0.23",
+        "@types/node": "^17.0.41",
         "@typescript-eslint/eslint-plugin": "^2.2.0",
         "@typescript-eslint/parser": "^2.2.0",
         "codecov": "^3.7.1",
