Update node to supported versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ 10, 12, 14, 16, 18 ]
+        node: [ 16, 18, 19, 20 ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@master
