--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "eslint-plugin-prettier": "^3.1.0",
         "fork-ts-checker-webpack-plugin": "^4.1.2",
         "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
         "license-webpack-plugin": "^4.0.0",
         "prettier": "^1.18.2",
         "ts-jest": "^29.1.0",
