--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "qs": "6.7.3",
         "xml2js": "^0.5.0",
         "json5": "^2.2.3",
+        "semver": ">=7.5.2",
         "@types/babel__traverse": "7.18.2",
         "@types/express-serve-static-core": "4.17.29"
     }
