--- a/package.json
+++ b/package.json
@@ -55,12 +55,14 @@
         "webpack-merge": "^4.2.2"
     },
     "dependencies": {
+        "Buffer": "^0.0.0",
         "isomorphic-webcrypto": "^2.3.6",
         "jsdom": "^20.0.0",
         "json-schema": "^0.4.0",
         "json5": "^2.2.3",
         "tslib": "^1.10.0",
         "ua-parser-js": "^1.0.35",
+        "ws": "^8.14.2",
         "xml2js": "^0.5.0"
     },
     "overrides": {
