--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ 16, 18, 19, 20, 21, 22, 23 ]
+        node: [ 16, 18, 19, 20, 21, 22 ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@master
