--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,9 @@
 version: 2
 updates:
-    - package-ecosystem: 'npm'
-      directory: '/'
-      target-branch: 'develop'
+    - package-ecosystem: npm
+      directory: /
+      target-branch: develop
       schedule:
-          interval: 'daily'
+          interval: daily
       labels:
-        - 'dependencies'
+          - dependencies
