--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ 16, 18, 19, 20 ]
+        node: [ 18, 19, 20, 21, 22, 23, 24 ]
+      fail-fast: false
     steps:
       - name: Checkout repository
         uses: actions/checkout@master
