--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
     branches:
       - master
       - develop
+      - dependabot/npm_and_yarn/develop/tslib-2.8.1
 
 jobs:
   nodejs-ubuntu-build:
