--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "isomorphic-webcrypto": "^2.3.6",
         "jsdom": "^26.0.0",
         "ws": "^8.14.2",
+        "tslib": "^1.10.0"
     },
     "overrides": {
         "qs": "6.7.3",
