Remove examples dirs before publishing (#395)
* Remove examples dirs before publishing

* Update master-publish-gh-pages-and-npm.yml

--- a/.github/workflows/master-publish-gh-pages-and-npm.yml
+++ b/.github/workflows/master-publish-gh-pages-and-npm.yml
@@ -25,6 +25,8 @@ jobs:
                   branch: gh-pages
                   clean: true
                   clean-exclude: develop/
+            - name: Delete examples directories
+              run: rm -rf examples dist/examples
             - name: Deploy to npm packages
               uses: JS-DevTools/npm-publish@v1
               with:
