--- a/.github/workflows/master-publish-gh-pages-and-npm.yml
+++ b/.github/workflows/master-publish-gh-pages-and-npm.yml
@@ -13,7 +13,7 @@ jobs:
             - name: Use Node.js
               uses: actions/setup-node@v2
               with:
-                  node-version: 16
+                  node-version: 22
             - name: Install dependencies
               run: npm install
             - name: Run release
@@ -25,6 +25,8 @@ jobs:
                   branch: gh-pages
                   clean: true
                   clean-exclude: develop/
+            - name: Delete examples directories
+              run: rm -rf examples dist/examples
             - name: Deploy to npm packages
               uses: JS-DevTools/npm-publish@v1
               with:
