Auto-merge dependabot & retarget to develop

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,6 @@ updates:
       directory: /
       target-branch: develop
       schedule:
-          interval: daily
+          interval: weekly
       labels:
           - dependencies
