--- a/.github/workflows/master-publish-gh-pages-and-npm.yml
+++ b/.github/workflows/master-publish-gh-pages-and-npm.yml
@@ -4,6 +4,9 @@ on:
     push:
         branches:
             - master
+permissions:
+  contents: read
+
 jobs:
     publish-ubuntu-build:
         runs-on: ubuntu-latest
