--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "webpack-merge": "^6.0.1"
     },
     "dependencies": {
+        "events": "^3.3.0",
         "isomorphic-webcrypto": "^2.3.6",
         "jsdom": "^27.0.0",
         "tslib": "^2.8.1",
