--- a/.github/workflows/master-publish-gh-pages-and-npm.yml
+++ b/.github/workflows/master-publish-gh-pages-and-npm.yml
@@ -8,7 +8,7 @@ jobs:
     publish-ubuntu-build:
         runs-on: ubuntu-latest
         permissions:
-            contents: read
+            contents: write
             id-token: write  # Needed for OIDC publishing
         steps:
             - name: Checkout repository
